added pivot table

--- a/notebooks/UN_Data_Exploration.ipynb
+++ b/notebooks/UN_Data_Exploration.ipynb
@@ -880,13 +880,335 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bc4f30-df89-42ec-a3c8-1155bae44e90",
+   "id": "91dda2f6-eb37-46e4-8f40-2582d806be69",
    "metadata": {},
    "source": [
-    "12. Find the top 5 counties and bottom 5 countries by GDP per capita in 2021.\n",
-    "\n",
-    "13. Now, return to the full dataset, `gdp_df`. Pivot the data for 1990 and 2021 (using the pandas `.pivot_table()` method or another method) so that each row corresponds to a country, each column corresponds to a year, and the values in the table give the GDP_Per_Capita amount. Drop any rows that are missing values for either 1990 or 2021. Save the result to a dataframe named `gdp_pivoted`.\n",
-    "\n",
+    "12. Find the top 5 counties and bottom 5 countries by GDP per capita in 2021."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5dad2b2a-8562-4203-a4c7-64d61c0a7861",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2144.166570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3934.287267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Africa Western and Central</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4698.926894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>16113.136519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>14496.865470</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Country  Year  GDP_Per_Capita\n",
+       "2                    Afghanistan  2021     2144.166570\n",
+       "26   Africa Eastern and Southern  2021     3934.287267\n",
+       "60    Africa Western and Central  2021     4698.926894\n",
+       "94                       Albania  2021    16113.136519\n",
+       "128                      Algeria  2021    14496.865470"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_2021.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "28d2737f-9c1a-45f5-b0c0-2396167ce736",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8067</th>\n",
+       "      <td>Virgin Islands</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>46893.549699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8089</th>\n",
+       "      <td>West Bank and Gaza</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>5663.121607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8119</th>\n",
+       "      <td>World</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19637.823230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8153</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3503.034914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8187</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3184.785451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Country  Year  GDP_Per_Capita\n",
+       "8067      Virgin Islands  2021    46893.549699\n",
+       "8089  West Bank and Gaza  2021     5663.121607\n",
+       "8119               World  2021    19637.823230\n",
+       "8153              Zambia  2021     3503.034914\n",
+       "8187            Zimbabwe  2021     3184.785451"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_2021.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "768a460b-dc63-4147-8a61-667a648aaba4",
+   "metadata": {},
+   "source": [
+    "13. Now, return to the full dataset, `gdp_df`. Pivot the data for 1990 and 2021 (using the pandas `.pivot_table()` method or another method) so that each row corresponds to a country, each column corresponds to a year, and the values in the table give the GDP_Per_Capita amount. Drop any rows that are missing values for either 1990 or 2021. Save the result to a dataframe named `gdp_pivoted`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a9a5dec8-d9f2-45ab-9ae7-c7364e7f1614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_df_1990_2021 = gdp_df[gdp_df['Year'].isin([1990, 2021])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "57c92c14-72fe-4a29-a25b-dee00ff1017e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_pivoted = gdp_df_1990_2021.pivot_table(\n",
+    "    values = 'GDP_Per_Capita',\n",
+    "    index = 'Country',\n",
+    "    columns = 'Year').dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "29d7eb7d-2bc8-4bb6-8a49-f78cd2cafbf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Year</th>\n",
+       "      <th>1990</th>\n",
+       "      <th>2021</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>34312.452803</td>\n",
+       "      <td>50978.951001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>44378.524027</td>\n",
+       "      <td>71318.307359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Upper middle income</th>\n",
+       "      <td>5934.125381</td>\n",
+       "      <td>19230.430577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uruguay</th>\n",
+       "      <td>14106.527502</td>\n",
+       "      <td>29441.477487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uzbekistan</th>\n",
+       "      <td>4214.583997</td>\n",
+       "      <td>9247.643827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vanuatu</th>\n",
+       "      <td>3101.680551</td>\n",
+       "      <td>3135.836649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viet Nam</th>\n",
+       "      <td>2467.964601</td>\n",
+       "      <td>12048.901994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>World</th>\n",
+       "      <td>11207.386344</td>\n",
+       "      <td>19637.823230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zambia</th>\n",
+       "      <td>2425.111287</td>\n",
+       "      <td>3503.034914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zimbabwe</th>\n",
+       "      <td>4013.299059</td>\n",
+       "      <td>3184.785451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Year                         1990          2021\n",
+       "Country                                        \n",
+       "United Kingdom       34312.452803  50978.951001\n",
+       "United States        44378.524027  71318.307359\n",
+       "Upper middle income   5934.125381  19230.430577\n",
+       "Uruguay              14106.527502  29441.477487\n",
+       "Uzbekistan            4214.583997   9247.643827\n",
+       "Vanuatu               3101.680551   3135.836649\n",
+       "Viet Nam              2467.964601  12048.901994\n",
+       "World                11207.386344  19637.823230\n",
+       "Zambia                2425.111287   3503.034914\n",
+       "Zimbabwe              4013.299059   3184.785451"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_pivoted.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f717b7e0-9c1c-4343-b107-c29b4aaa8e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "14. Create a new column in `gdp_pivoted` named `Percent_Change`. This column should contain the percent change in GDP_Per_Capita from 1990 to 2021. Hint: Percent change is calculated as 100*(New Value - Old Value) / Old Value.\n",
     "\n",
     "15. How many countries experienced a negative percent change in GDP per capita from 1990 to 2021?\n",
@@ -924,14 +1246,6 @@
     "1. Choose and download another data set from the UN data [http://data.un.org/Explorer.aspx](http://data.un.org/Explorer.aspx) to explore. You may want to combine your new dataset with one or both of the datasets that you already worked with. Report any interesting correlations or trends that you find. \n",
     "2.    If time allows, check out the plotly library to add additional interativity to your plots. [https://plotly.com/python/plotly-express/](https://plotly.com/python/plotly-express/)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9a5dec8-d9f2-45ab-9ae7-c7364e7f1614",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
