read in continents csv, also added .DS_Store to .gitignore

--- a/notebooks/UN_Data_Exploration.ipynb
+++ b/notebooks/UN_Data_Exploration.ipynb
@@ -1647,11 +1647,106 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa81e114-2d1c-4395-936b-788e0d0e585e",
+   "id": "cf523718-daf1-4f39-a318-59668584357a",
    "metadata": {},
    "source": [
-    "17. Read in continents.csv contained in the `data` folder into a new dataframe called `continents`. We will be using this dataframe to add a new column to our dataset.\n",
-    "\n",
+    "17. Read in continents.csv contained in the `data` folder into a new dataframe called `continents`. We will be using this dataframe to add a new column to our dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2423fe04-9bf5-4787-a683-b2514972dfc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continents = pd.read_csv('../data/continents.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1fd3ce98-666f-459d-a8c6-707c8e4957e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Continent</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Albania</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Andorra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Angola</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Continent      Country\n",
+       "0      Asia  Afghanistan\n",
+       "1    Europe      Albania\n",
+       "2    Africa      Algeria\n",
+       "3    Europe      Andorra\n",
+       "4    Africa       Angola"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "continents.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "422d0645-0bb4-4ec5-a38f-b59cc5fdfae4",
+   "metadata": {},
+   "source": [
     "18. Merge gdp_df and continents. Keep only the countries that appear in both data frames. Save the result back to gdp_df.\n",
     "\n",
     "19. Determine the number of countries per continent. Create a bar chart showing this.\n",
@@ -1680,22 +1775,6 @@
     "1. Choose and download another data set from the UN data [http://data.un.org/Explorer.aspx](http://data.un.org/Explorer.aspx) to explore. You may want to combine your new dataset with one or both of the datasets that you already worked with. Report any interesting correlations or trends that you find. \n",
     "2.    If time allows, check out the plotly library to add additional interativity to your plots. [https://plotly.com/python/plotly-express/](https://plotly.com/python/plotly-express/)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2423fe04-9bf5-4787-a683-b2514972dfc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fd3ce98-666f-459d-a8c6-707c8e4957e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
