clean and delete extra cells

--- a/notebooks/UN_Data_Exploration.ipynb
+++ b/notebooks/UN_Data_Exploration.ipynb
@@ -1430,19 +1430,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9ff27cd-eb05-4cfb-8848-fe9e708f2e60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "2bde8dc7-6ddd-4a95-a7c1-09145651ca5e",
    "metadata": {},
    "source": [
-    "> **We now have an additional column added to our dataset defining the percent change in GDP per capita from 1990 to 2021.**"
+    "> Above you can an additional column added to our dataset defining the percent change in GDP per capita from 1990 to 2021."
    ]
   },
   {
@@ -1660,30 +1652,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "75fb46b3-66e1-4cf2-ac43-58602622b4c1",
+   "id": "9221151b-903b-47ab-b7a5-c5a00c05a69b",
    "metadata": {},
    "source": [
     "> ### Observations \n",
     ">\n",
     ">- **Equitorial Guinea** experienced a rapid increase in GDP. This aggressive spike hit its peak mid 2000s and had a steady decline.\n",
     ">- **China** shows consistent and stable growth in GDP Per Capita throughout the years.\n",
-    ">- While both countries accomplished large growth in GDP Per Capita, their patterns differ greatly."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "826f37fe-82ab-4602-b031-4485170eb1ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "635c3313-1c9b-4b1f-b973-831c86ea8aa9",
-   "metadata": {},
-   "source": [
+    ">- While both countries accomplished large growth in GDP Per Capita, their patterns differ greatly.\n",
+    ">\n",
     "> **Combined Plot:** The chart below displays GDP Per Capita growth between both countries on the same axis."
    ]
   },
@@ -1826,14 +1805,6 @@
    "source": [
     "19. Determine the number of countries per continent. Create a bar chart showing this."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21935393-7a68-4eef-82be-6a21263fb664",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2213,14 +2184,6 @@
    "source": [
     "22. Drop the Country Code, Indicator Name, and Indicator Code columns. Then use [`.melt()`](https://pandas.pydata.org/docs/reference/api/pandas.melt.html) to convert your data from wide to long. That is, instead of having one row per country and multiple colums per year, we want to have multiple rows per country and a single column for year. After melting, rename the columns to `Country`, `Year`, and `Life_Expectancy`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cd48d9c-9813-43c4-9427-94db272e13b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2641,14 +2604,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01a0de4c-b611-43d9-acc8-fc0d97f3af5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4b1ede12-38a5-4fd3-9391-4cf330a86f84",
    "metadata": {},
@@ -2663,14 +2618,6 @@
    "source": [
     "24. Merge `gdp_df` and `life_expectancy`, keeping all countries and years that appear in both DataFrames. Save the result to a new DataFrame named `gdp_le`. If you get any errors in doing this, read them carefully and correct them. Look at the first five rows of your new data frame to confirm it merged correctly. Also, check the last five rows to make sure the data is clean and as expected."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8aefd1a-8712-4c9b-98e8-7d4966231d4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2998,14 +2945,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73fbc95c-e146-400d-8045-bc5034493bdf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "888aca41-e0e5-48a4-824f-2a6da74bd18b",
    "metadata": {},
@@ -3158,14 +3097,6 @@
    "source": [
     "> In the year 2021 **13.4%** of countries had a life expectancy of at least **80 years**."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8046800f-632e-4f1a-a803-96db93e00ab0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3735,14 +3666,6 @@
    "source": [
     "gdp_df.shape, interest_rates.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "782db50e-a8ce-44c2-b7c0-bcc8474532a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
